Fixed: GITHUB-205: white-space was spelled whitespace in testng.css (carlin-scott)

--- a/src/main/resources/testng-reports.css
+++ b/src/main/resources/testng-reports.css
@@ -106,7 +106,7 @@ a:hover {
 }
 
 .stack-trace {
-    whitespace: pre;
+    white-space: pre;
     font-family: monospace;
     font-size: 12px;
     margin-top: 0px;
